refact: Starter nOfRunFolds and runFoldIndex